--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>ساخت PDF</title>
 
     <link rel="stylesheet" href="styles.css">
+    <!-- لینک‌های Quill.js -->
+    <link href="https://cdn.quilljs.com/1.3.7/quill.snow.css" rel="stylesheet">
 </head>
 <body>
     <h1>ساخت PDF با فونت فارسی</h1>
-    <textarea id="text-input" dir="rtl" placeholder="متن خود را وارد کنید"></textarea>
+    <!-- ویرایشگر متنی -->
+    <div id="editor-container" style="height: 200px;"></div>
+
     <button id="generate-pdf">تولید PDF</button>
 
+    <!-- اسکریپت‌های موردنیاز -->
+    <script src="https://cdn.quilljs.com/1.3.7/quill.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="app.js"></script>
 </body>
