--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>ساخت PDF با فونت فارسی</h1>
     <!-- ویرایشگر متنی -->
-    <div id="editor-container" style="height: 200px;"></div>
+    <div id="editor-container" class="main-editor"></div>
 
     <button id="generate-pdf">تولید PDF</button>
 
